      flat collection trees, the difference is basically between a small
      incremental scan and a near full rescan.
    * Ask the user for confirmation before refetching lyrics and overwriting
      cached ones
    * It is now possible to stop editing lyrics without saving changes in
      the lyrics applet

  BUGFIXES:
    * Correctly modify the Lyrics Applet's title when its state changes

VERSION 2.2
  CHANGES:
    * The MusicBrainz ID of a track is now scrobbled to Last.fm, if it exists.
      (BR 122281)
    * More collection scanning speedups.

  BUGFIXES:
    * Replay gain works on the Phonon Xine backend.
    * Fadeout on track end works again.
    * Fixed regression where the last album to be scanned would not have its
      cover picked up by the collection scanner.
    * Sorting by track length in the playlist is now possible. (BR 208689)
    * Fixed track bookmarks not immediately getting removed from progress bar 
      when they are deleted from the bookmark manager. 
    * Fixed new track bookmarks not getting shown in the progress bar
      immediately.
    * Fixed track bookmarks not getting correctly repainted when resizing 
      progress bar. (BR 207091)
    * Correct a logic bug during incremental scanning that could cause the
      wrong tracks to be removed from the collection, requiring a full rescan.
      Should fix bug 208403 and likely multiple others. (BR 208403)
    * "Configure Amarok" dialog takes up less space, making it suitable for
      small screens.
    * Fixed photos applet not working after resuming playback. (BR 206829)
    * Fixed regression where the genre field in the Tag Dialog would show the
      composer of the track. (BR 208255)
    * Don't reshuffle the playlist every time the active track changes when
    * using a random sort order.
    * Fixed the Various Artist node sometimes being shown in the Collection
      Browser with nothing underneath it (or an empty "Unknown" album).